--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,7 @@
     <link href="./public/css/blog.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&amp;display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="public/images/logo-png.png" />
+    <script src="public/js/blog.js"></script>
 </head>
 <body>
     <header>
@@ -57,7 +58,34 @@
         </div>
     </main>
     <footer>
-
+    <div id="contact">
+        <div class="about-resize">
+            <!-- <h3 style="margin-bottom: 2%; font-size: 3vh;">Contact</h3> -->
+            <div class="list-project" style="font-size: 1.7vh;   align-items: center;
+            justify-content: center;">
+                <div class="alignement">
+                    <img src="public/images/banniere.png" alt="Bannière" id="banniere">
+                    <p id="description-contact">Digital Consultant (DC) est une entreprise pluridisciplinaire spécialisée
+                        dans la transition numérique des petites et moyennes entreprises. Nous
+                        sommes composés de professionnels indépendants expérimentés qui
+                        collaborent régulièrement ensemble.</p>
+                </div>
+                <div class="alignement margin-footer-title" id="list-contact">
+                    <h3 id="title-contact">Contact</h3>
+                    <article>
+                        <p>430 Rue Pierre Simon Laplace, 13290 Aix-en-Provence</p>
+                    </article>
+                    <article>
+                        <p>+33 6 35 08 38 62</p>
+                    </article>
+                    <article>
+                        <p>+33 4 94 12 45 23</p>
+                    </article>
+                </div>
+            </div>
+            <p class="copyright" id="copyright">2022 Campus Academy All Rights Reserved</p>
+        </div>
+    </div>
     </footer>
     <script src="public/js/blog.js"></script>
 </body>
