--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li><a href="#partenaires">Partenaires</a></li>
                     <li><a href="#galerie">Galerie</a></li>
                     <li><a href="#avis">Avis</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="./blog.html">Blog</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
