--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a href="#services">Services</a>
                     <a href="#partenaires">Partenaires</a>
                     <a href="#avis">Avis</a>
-                    <a href="/blog.html">Blog</a>
+                    <a href="./blog.html">Blog</a>
                     <a href="#contact">Contact</a>
                 </div>
             </nav>
