--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,6 @@
     <meta name="description" content="Digital Consultant Blog">
     <title>Digital Consultant - Blog</title>
     <link href="./public/css/blog.css" rel="stylesheet"/>
-	<link href="./public/css/mai,.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&amp;display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="public/images/logo-png.png" />
     <script src="public/js/blog.js"></script>
@@ -24,7 +23,7 @@
                     <a href="#services">Services</a>
                     <a href="#partenaires">Partenaires</a>
                     <a href="#avis">Avis</a>
-                    <a href="/blog.html">Blog</a>
+                    <a href="./blog.html">Blog</a>
                     <a href="#contact">Contact</a>
                 </div>
             </nav>
