--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Digital Consultant Blog">
     <title>Digital Consultant - Blog</title>
     <link href="./public/css/blog.css" rel="stylesheet"/>
+	<link href="./public/css/mai,.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&amp;display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="public/images/logo-png.png" />
     <script src="public/js/blog.js"></script>
@@ -18,11 +19,11 @@
                     <img src="public/images/logo-png.png" alt="icon" class="icon" id="icon">
                 </div>
                 <div id="navbar">
-                    <a href="/index.html">Accueil</a>
-                    <a href="#about">À propos</a>
-                    <a href="#services">Services</a>
-                    <a href="#partenaires">Partenaires</a>
-                    <a href="#avis">Avis</a>
+                    <a href="./index.html">Accueil</a>
+                    <a href="./index.html#about">À propos</a>
+                    <a href="./index.html#services">Services</a>
+                    <a href="./index.html#partenaires">Partenaires</a>
+                    <a href="./index.html#avis">Avis</a>
                     <a href="./blog.html">Blog</a>
                     <a href="#contact">Contact</a>
                 </div>
