--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <img src="public/images/logo-png.png" alt="icon" class="icon" id="icon">
                 </div>
                 <div id="navbar">
-                    <a href="/index.html">Accueil</a>
+                    <a href="#">Accueil</a>
                     <a href="#about">À propos</a>
                     <a href="#services">Services</a>
                     <a href="#partenaires">Partenaires</a>
