--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a href="#services">Services</a>
                     <a href="#partenaires">Partenaires</a>
                     <a href="#avis">Avis</a>
-                    <a href="./blog.html">Blog</a>
+                    <a href="./views/blog.html">Blog</a>
                     <a href="#contact">Contact</a>
                 </div>
             </nav>
@@ -195,7 +195,7 @@
                                 <li><a href="./views/mentions.html">Mentions Légales</a></li>
                                 <li><a href="#galerie">Galerie</a></li>
                                 <li><a href="#avis">Avis</a></li>
-                                <li><a href="#">Blog</a></li>
+                                <li><a href="./views/blog.html">Blog</a></li>
                             </ul>
                         </nav>
                     </div>
